--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "devDependencies": {},
   "scripts": {
      "build":"npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-     "start": "npm run start --prefix backend"
+     "start": "node src/index.js"
   },
-  "keywords": [],
+  "keywords": [],   
   "author": "",
   "license": "ISC",
   "description": ""
